--- a/src/index.html
+++ b/src/index.html
@@ -4,36 +4,62 @@ title: Chai.pink
 ---
 
 <section class="section content">
-  <p class="is-centered">
-    hewwo and welcome to my site on the interwebs!
+  <p class="is-center-aligned">
+    <img class="box" src="/assets/images/chai_flash.png" height="192"><br>
+    <span class="is-small">🎨 <a href="https://bsky.app/profile/flashkirby.bsky.social">Flashkirby</a></span>
   </p>
 
-  <p class="is-centered">
-    <img src="/assets/chai.png" height="256">
+  <h2 class="fancy-title">welcome</h2>
+
+  <p>
+    hewwo! I am <span class="is-bold">Chai</span> and this is my cozy corner on the interwebs! I work in game audio and I love to code and be creative in my free time.
   </p>
 
-  <p class="is-centered">
-    my name is <b>Chai</b> and my pronouns are <b>she/her</b> and <b>fae/faer</b>
+  <p>
+    if you know me from other parts of the interwebs, feel welcome! this little site is a way to keep my professional accounts and personal presence separated, but I'm also not trying to keep it a secret, so no worries!
   </p>
 
-  <p class="is-centered">
-    <img src="/assets/chai_blush.png" height="96">
-    <img src="/assets/chai_pleading.png" height="96">
-    <img src="/assets/chai_crying.png" height="96">
-  </p>
+  <h2 class="fancy-title">about me</h2>
 
-  <p class="is-centered">
-    I like Eevee, cookies, eeping, and caramelldansen. click the dancing Chai for accompanying moosic!
-  </p>
+  <div class="box flex is-vertical is-gapless is-extended">
+    <div class="flex">
+      <p class="is-bold">name:</p>
+      <p class="is-extended is-right-aligned"><span class="is-bold">Chai</span>, チャイ</p>
+    </div>
 
-  <p class="is-centered">
-    <a href="#" id="caramell-trigger">
-      <img src="/assets/dansen.gif" height="192">
-    </a>
+    <div class="flex">
+      <p class="is-bold">pronouns:</p>
+      <p class="is-extended is-right-aligned"><a href="https://en.pronouns.page/she/her">she/her</a>, <a href="https://en.pronouns.page/fae/faer">fae/faer</a></p>
+    </div>
 
-    <audio loop id="caramell">
-      <source src="/assets/caramell.ogg" type="audio/ogg">
-      <source src="/assets/caramell.mp3" type="audio/mpeg">
-    </audio>
-  </p>
+    <div class="flex">
+      <p class="is-bold">birthday:</p>
+      <p class="is-extended is-right-aligned">August 1 (Chai-specific)</p>
+    </div>
+      
+    <div class="flex">
+      <p class="is-bold">favorite color:</p>
+      <p class="is-extended is-right-aligned">purple, specifically #7D65C7</p>
+    </div>
+
+    <div class="flex">
+      <p class="is-bold">favorite food:</p>
+      <p class="is-extended is-right-aligned">cookies and tea</p>
+    </div>
+
+    <div class="flex">
+      <p class="is-bold">favorite moosic:</p>
+      <p class="is-extended is-right-aligned"><a id="music-trigger" href="#">Caramelldansen</a>, other high energy stuff</p>
+    </div>
+
+    <div class="flex">
+      <p class="is-bold">favorite thing to do:</p>
+      <p class="is-extended is-right-aligned">eeping, cuddling with Eevee</p>
+    </div>
+  </div>
 </section>
+
+<audio loop id="music">
+  <source src="/assets/caramell.ogg" type="audio/ogg">
+  <source src="/assets/caramell.mp3" type="audio/mpeg">
+</audio>
